--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-host-rbmq-client",
-  "version": "1.7.6",
-  "description": "Utility to send messages with authorization header to a server running api-host-rbmq.",
+  "version": "2.0.0",
+  "description": "Utility to send messages with an authorization cookie to a server running api-host-rbmq.",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
